--- a/code/src/main/resources/application.properties
+++ b/code/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 # \uFFFD\uFFFD\uFFFD\u077F\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
-spring.datasource.druid.url=jdbc:mysql://127.0.0.1:3306/ks?characterEncoding=utf8&useSSL=true
+#自己电脑
+#spring.datasource.druid.url=jdbc:mysql://127.0.0.1:3306/ks?characterEncoding=utf8&useSSL=true
+#spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.druid.username=root
+#spring.datasource.druid.password=0920
+#在公司
+spring.datasource.druid.url=jdbc:mysql://127.0.0.1:3306/test?characterEncoding=utf8&useSSL=true
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.druid.username=root
-spring.datasource.druid.password=0920
+spring.datasource.druid.password=123456
 
 #\u6253\u5370springData\u7684sql\u8BED\u53E5
 spring.jpa.show-sql=true
@@ -46,7 +52,7 @@ spring.redis.host=localhost
 ## Redis\u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3
 spring.redis.port=6379
 ## Redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
-spring.redis.password=
+spring.redis.password=redis123456
 
 #\uFFFD\uFFFD\u013F\uFFFD\uFFFD\uFFFD\uFFFD
 server.servlet.context-path=/code
@@ -56,3 +62,5 @@ hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 #\u52A0\u8F7D\u5176\u5B83\u7684properties\u6587\u4EF6
 #spring.profiles.active=logger
 logging.config=classpath:conf/logback-dev.xml
+
+server.port=8088
