--- a/code/src/main/resources/application.properties
+++ b/code/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.datasource.druid.test-on-return=false
 spring.datasource.druid.pool-prepared-statements=true
 spring.datasource.druid.max-open-prepared-statements=20
 # mybatis \uFFFD\uFFFD\uFFFD\uFFFD
-mybatis.mapper-locations=classpath:com/example/code/mapper/*.xml #mapper\uFFFD\u013C\uFFFD\uFFFD\u0134\uFFFD\uFFFD\u03BB\uFFFD\uFFFD
+mybatis.mapper-locations=classpath:com.example.code.mapper/*.xml #mapper\uFFFD\u013C\uFFFD\uFFFD\u0134\uFFFD\uFFFD\u03BB\uFFFD\uFFFD
 mybatis.type-aliases-package=com.example.code.entity #\uFFFD\uFFFD\u04E6\u02B5\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u03BB\uFFFD\uFFFD
 pagehelper.helper-dialect=mysql
 
@@ -62,5 +62,9 @@ hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 #\u52A0\u8F7D\u5176\u5B83\u7684properties\u6587\u4EF6
 #spring.profiles.active=logger
 logging.config=classpath:conf/logback-dev.xml
-
+#设置成0或则正数dispatcherServlet启动时就会初始化
+spring.mvc.servlet.load-on-startup=100
 server.port=8088
+
+#mongo
+#spring.data.mongodb.uri=mongodb://localhost:27017/springboot-db
