--- a/code/src/main/resources/application.properties
+++ b/code/src/main/resources/application.properties
@@ -33,8 +33,7 @@ mybatis.type-aliases-package=com.example.code.entity #\uFFFD\uFFFD\u04E6\u02B5\u
 pagehelper.helper-dialect=mysql
 
 #mybatis\u7684\u4E0B\u5212\u7EBF\u8F6C\u9A7C\u5CF0\u914D\u7F6E
-#mybatis.configuration.map-underscore-to-camel-case=true
-
+mybatis.configuration.map-underscore-to-camel-case=true 
 
 #\u6253\u5370sql\u65F6\u7684\u8BED\u53E5 ========================
 #logging.level.com.acong.dao = debug
