--- a/code/src/main/resources/txt.properties
+++ b/code/src/main/resources/txt.properties
@@ -1,5 +1,5 @@
-SUCCESS=\u6210\u529F
+SUCCESS=成功
 EXCEPTION=\u6267\u884C\u5931\u8D25
 PARAM_IS_NULL=\u7F3A\u5C11\u53C2\u6570
-ELEMENT_IS_EXISTS=\u5143\u7D20\u5DF2\u7ECF\u5B58\u5728
+ELEMENT_IS_EXISTS=元素不存在
 NO_HAVE_INVENTORY=库存不住
