--- a/code/pom.xml
+++ b/code/pom.xml
@@ -177,6 +177,12 @@
             <artifactId>spring-boot-starter-websocket</artifactId>
             <version>2.0.4.RELEASE</version>
         </dependency>
+        <!--文件上传-->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.3</version>
+        </dependency>
     </dependencies>
 
     <build>
