提交资源文件

--- a/code/src/main/resources/application.properties
+++ b/code/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.datasource.druid.test-on-return=false
 spring.datasource.druid.pool-prepared-statements=true
 spring.datasource.druid.max-open-prepared-statements=20
 # mybatis \uFFFD\uFFFD\uFFFD\uFFFD
-mybatis.mapper-locations=classpath:com.example.code.mapper/*.xml #mapper\uFFFD\u013C\uFFFD\uFFFD\u0134\uFFFD\uFFFD\u03BB\uFFFD\uFFFD
+#mybatis.mapper-locations=classpath:com.example.code.mapper/*.xml #mapper\uFFFD\u013C\uFFFD\uFFFD\u0134\uFFFD\uFFFD\u03BB\uFFFD\uFFFD
 mybatis.type-aliases-package=com.example.code.entity #\uFFFD\uFFFD\u04E6\u02B5\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u03BB\uFFFD\uFFFD
 pagehelper.helper-dialect=mysql
 
@@ -52,7 +52,7 @@ spring.redis.host=localhost
 spring.redis.port=6379
 ## Redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
 spring.redis.password=redis123456
-
+spring.redis.timeout=1800
 #\uFFFD\uFFFD\u013F\uFFFD\uFFFD\uFFFD\uFFFD
 server.servlet.context-path=/code
 
@@ -64,6 +64,25 @@ logging.config=classpath:conf/logback-dev.xml
 #设置成0或则正数dispatcherServlet启动时就会初始化
 spring.mvc.servlet.load-on-startup=100
 server.port=8088
+#遇到重复的名称 允许覆盖
+spring.main.allow-bean-definition-overriding=true
+# mybatis-plus配置slq打印日志
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 #mongo
 #spring.data.mongodb.uri=mongodb://localhost:27017/springboot-db
+#单个文件上传大小
+spring.servlet.multipart.max-file-size= 256MB
+#对于rabbitMQ的支持
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.virtual-host=/
+# 消息发送到交换机确认机制,是否确认回调
+spring.rabbitmq.publisher-confirms=true
+spring.rabbitmq.publisher-returns=true
+#开启重试
+spring.rabbitmq.listener.simple.retry.enabled=true
+#重试次数，默认为3 次
+spring.rabbitmq.listener.simple.retry.max-attempts=3
