对资源文件稍微修改

--- a/code/src/main/resources/application.properties
+++ b/code/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # \uFFFD\uFFFD\uFFFD\u077F\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
-#×Ô¼ºµçÄÔ
+#ï¿½Ô¼ï¿½ï¿½ï¿½ï¿½ï¿½
 #spring.datasource.druid.url=jdbc:mysql://127.0.0.1:3306/ks?characterEncoding=utf8&useSSL=true
 #spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.druid.username=root
 #spring.datasource.druid.password=0920
-#ÔÚ¹«Ë¾
+#ï¿½Ú¹ï¿½Ë¾
 spring.datasource.druid.url=jdbc:mysql://127.0.0.1:3306/test?characterEncoding=utf8&useSSL=true
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.druid.username=root
@@ -51,7 +51,7 @@ spring.redis.host=localhost
 ## Redis\u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3
 spring.redis.port=6379
 ## Redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
-spring.redis.password=redis123456
+spring.redis.password=redis..
 spring.redis.timeout=1800
 #\uFFFD\uFFFD\u013F\uFFFD\uFFFD\uFFFD\uFFFD
 server.servlet.context-path=/code
@@ -61,28 +61,30 @@ hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 #\u52A0\u8F7D\u5176\u5B83\u7684properties\u6587\u4EF6
 #spring.profiles.active=logger
 logging.config=classpath:conf/logback-dev.xml
-#ÉèÖÃ³É0»òÔòÕıÊıdispatcherServletÆô¶¯Ê±¾Í»á³õÊ¼»¯
+#ï¿½ï¿½ï¿½Ã³ï¿½0ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½dispatcherServletï¿½ï¿½ï¿½ï¿½Ê±ï¿½Í»ï¿½ï¿½Ê¼ï¿½ï¿½
 spring.mvc.servlet.load-on-startup=100
 server.port=8088
-#Óöµ½ÖØ¸´µÄÃû³Æ ÔÊĞí¸²¸Ç
+#ï¿½ï¿½ï¿½ï¿½ï¿½Ø¸ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 spring.main.allow-bean-definition-overriding=true
-# mybatis-plusÅäÖÃslq´òÓ¡ÈÕÖ¾
+# mybatis-plusï¿½ï¿½ï¿½ï¿½slqï¿½ï¿½Ó¡ï¿½ï¿½Ö¾
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 #mongo
 #spring.data.mongodb.uri=mongodb://localhost:27017/springboot-db
-#µ¥¸öÎÄ¼şÉÏ´«´óĞ¡
+#ï¿½ï¿½ï¿½ï¿½ï¿½Ä¼ï¿½ï¿½Ï´ï¿½ï¿½ï¿½Ğ¡
 spring.servlet.multipart.max-file-size= 256MB
-#¶ÔÓÚrabbitMQµÄÖ§³Ö
+#ï¿½ï¿½ï¿½ï¿½rabbitMQï¿½ï¿½Ö§ï¿½ï¿½
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.virtual-host=/
-# ÏûÏ¢·¢ËÍµ½½»»»»úÈ·ÈÏ»úÖÆ,ÊÇ·ñÈ·ÈÏ»Øµ÷
+# ï¿½ï¿½Ï¢ï¿½ï¿½ï¿½Íµï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½È·ï¿½Ï»ï¿½ï¿½ï¿½,ï¿½Ç·ï¿½È·ï¿½Ï»Øµï¿½
 spring.rabbitmq.publisher-confirms=true
 spring.rabbitmq.publisher-returns=true
-#¿ªÆôÖØÊÔ
+#ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 spring.rabbitmq.listener.simple.retry.enabled=true
-#ÖØÊÔ´ÎÊı£¬Ä¬ÈÏÎª3 ´Î
+#ï¿½ï¿½ï¿½Ô´ï¿½ï¿½ï¿½ï¿½ï¿½Ä¬ï¿½ï¿½Îª3 ï¿½ï¿½
 spring.rabbitmq.listener.simple.retry.max-attempts=3
+#å¼€å¯actuatorä¸­çš„æ‰€æœ‰ç«¯ç‚¹ï¼Œè‹¥ä¸æ˜¯* åˆ™çœ‹ä¸äº†beans
+management.endpoints.web.exposure.include=*
