--- a/code/pom.xml
+++ b/code/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.example</groupId>
     <artifactId>code</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging> <!--打包方式-->
     <name>code</name>
     <description>Demo project for Spring Boot</description>
 
@@ -189,8 +190,11 @@
             <artifactId>spring-boot-starter-amqp</artifactId>
             <version>2.1.3.RELEASE</version>
         </dependency>
-
-
+        <!--引入actuator自动为spring boot构建的应用提供一系列用于监控的端点-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
